--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,5 @@
-Authors of gtlangs-lin package.
+Authors of giellaltkeyboards-lin package.
 
 The following people have legal copyright to files and software in this
 directory and its subdirectories:
 
-__FIXME__
